@@ -8,7 +8,6 @@
     <em:version>0.0.6</em:version>
     <em:type>2</em:type>
 
-    <!-- Firefox -->
     <em:targetApplication>
       <Description>
         <em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
