@@ -1,4 +1,9 @@
 
+  - Cleaned up code a bit
+	- Removed debug print statements
+	- Updated Firefox support version to 3.0.*
+	- Updated license of the extension to the new BSD license
+
 2008-06-07 - Release Version: 0.0.6.23
 
 	- Bugfix - Moved jQuery to a namespace under FirePHPLib to avoid namespace conflicts with other extensions
